--- a/commom/templates/erro.html
+++ b/commom/templates/erro.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ecoflex</title>
-    <meta name="robots" content="noindex, nofollow">
-    <meta name="description" content="" />
-    <link href="commom/img/icon-tab.png" rel="icon">
-    <link href="commom/css/bootstrap.min.css" rel="stylesheet">
-    <link href="commom/css/estilo.css" rel="stylesheet">
+    <title>Entre em contato conosco!</title>
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Empresa de calhas de chuva automotivas. Solicite um orçamento." />
+    <link href="{$URL}commom/img/icon-tab.png" rel="icon">
+    <link href="{$URL}commom/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{$URL}commom/css/estilo.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -21,17 +21,14 @@
     <div class="container-fluid pd-none">
         {include file="inc/header.html"}
         <div class="row hidden-xs">
-            <img class="img-banner-interna" src="commom/img/banner-fale-conosco.jpg" alt="fale conosco" title="fale conosco">
-            <h2 class="titulo-interna">contato</h2>
+            <img class="img-banner-interna" src="{$URL}commom/img/banner-fale-conosco.jpg" alt="fale conosco" title="fale conosco">
+            <h2 class="titulo-interna">Página não encontrada</h2>
         </div>
         {include file="inc/bradcrumb.html"}
         <section class="conteudo">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-8">
-                    <h1 class="titulo-destaque-pag align-left">Entre em contato conosco!</h1>
-                    <div class="bloco-contato-fale pd-top-30">
-                        <p class="linha-rodape">Obrigado, em breve entraremos em contato!</p>
-                    </div>
+                    <h1 class="titulo-destaque-pag align-left">Página não encontrada</h1><br>
                 </div>  
                 <div class="col-xs-12 col-sm-4 col-md-4 bloco-contato-fale">  
                     <div class="encapsula-contato-fale">
