--- a/commom/templates/inc/form.html
+++ b/commom/templates/inc/form.html
@@ -1,5 +1,5 @@
-<form class="form-horizontal" method="post" name="contato" action="envia.php">
-    <input type="hidden" name="pagina" value="{$pagina}">
+<form class="form-horizontal" method="post" name="contato" action="{$URL}envia">
+    <input type="hidden" name="pagina" value="{$url[0]}">
     <input type="hidden" name="cod" value="{$dados[0].codigo}">
     <div class="form-group">
         <label for="nome" class="col-sm-2 control-label">Nome*</label>
