--- a/commom/templates/obrigado-localizacao.html
+++ b/commom/templates/obrigado-localizacao.html
@@ -37,7 +37,7 @@
                     <div class="encapsula-contato-fale">
                         <p class="titulo-rodape">Atendimento:</p>
                         <ul>
-                            <li class="linha-rodape"><a class="link-rodape" href="tel:1100000000 ">(11) 0000-0000</a></li>
+                            <li class="linha-rodape"><a class="link-rodape" href="tel:01140430356">(11) 40430356</a></li>
                             <li class="linha-rodape"><a class="link-rodape" href="mailto:ecoflexautomotive@uol.com.br">ecoflexautomotive@uol.com.br</a></li>
                             <li class="linha-rodape">Seg a Sáb das 9:00 às 18:30hs.</li>
                         </ul>
@@ -46,9 +46,9 @@
                     <div class="encapsula-contato-fale">
                         <p class="titulo-rodape">Localização:</p>
                         <ul>
-                            <li class="linha-rodape">Rua Nononon nnono, 4487</li>
-                            <li class="linha-rodape">Nome Bairro - São Paulo - SP</li>
-                            <li class="linha-rodape">CEP:00000-000</li>
+                            <li class="linha-rodape">Rua Álvares Cabral 477</li>
+                            <li class="linha-rodape">Vila Conceição - Diadema - SP</li>
+                            <li class="linha-rodape">CEP: 09981-030</li>
                         </ul>
                     </div>
                 </div>
